--- a/_posts/2014-07-07-experiencing-haskell.html
+++ b/_posts/2014-07-07-experiencing-haskell.html
@@ -1,21 +1,20 @@
 ---
 layout: post
 title: Experiencing Haskell
-abstract: Dabble into the functional world with Haskell.
-published: false
+abstract: Looking into the functional world with Haskell.
 ---
 
-<p>There seems to be a growing interest in (purely) functional languages these days. I've looked at lots of different languages in the past (such as Go, Python, Ruby and others) but never a purely functional one. So recently I decided to dig into Haskell, with a view to discovering some of the fundamental differences. I wanted to share some of my findings with you in this post.</p>
+<p>There seems to be a growing interest in (purely) functional languages these days. I've looked at lots of different languages in the past (such as Go, Python, Ruby and others) but never a (purely) functional one. So recently I decided to dig into Haskell, with a view to discovering some of the fundamental differences. I wanted to share some of my findings with you in this post.</p>
 
 <h2>The Type System</h2>
 
-<p>This is one of the things Haskell is exceptionally good at: types! It has a very strong static type system which is based on Hindley-Milner type inference, that allows the compiler to infer most if not all of the types at compile time. So only in edge cases, or for optimization purposed is the programmer forced to give type annotations. Another great feature of Haskell's type system is its support for type variables. It's Haskell's equivalent of C++ templates, and a feature Go is still missing. They allow for expressive type signatures and contraint based generic typing, i.e.</p>
+<p>This is one of the things Haskell is exceptionally good at: types! It has a very strong static type system which is based on Hindley-Milner type inference, that allows the compiler to infer most if not all of the types at compile time. So only in edge cases, or for optimization purposes is the programmer forced to give type annotations. Another great feature of Haskell's type system is its support for type variables. It's Haskell's equivalent of C++ templates, and a feature Go is still missing. They allow for expressive type signatures and contraint based generic typing, i.e.</p>
 
 <pre><code>(sort) :: Ord a => [a] -> [a]</code></pre>
 
-<p>This says, there's a function, called <code>sort</code>, that takes a list with values of any type, <em>contrainted by the typeclass <code>Ord</code></em>, and then returns a value of the same type. Here the <code>Ord</code> typeclass signifies that the values in the list have to be orderable. Now the <code>a</code> could have also been any other string. But the point is, that just from the type signature it's immediately obvious what transformation the function applies to its arguments.</p>
+<p>This says that there's a function, called <code>sort</code>, that takes a list with values of any type, <em>contrained by the typeclass <code>Ord</code></em>, and then returns a value of the same type. Here the <code>Ord</code> typeclass signifies that the values in the list have to be orderable. Now the <code>a</code> could have also been any other string. But the point is, that just from the type signature it's immediately obvious what transformation the function applies to its arguments.</p>
 
-<p>Because of this expressiveness, there's a seperate <a href="http://www.haskell.org/hoogle/">search engine</a> that will search for functions with a given type signature (regardless of the variables used).</p>
+<p>Because of this expressiveness, there's a separate <a href="http://www.haskell.org/hoogle/">search engine</a> that will search for functions with a given type signature (regardless of the variables used).</p>
 
 <h2>Algebraic Data Types</h2>
 
@@ -38,7 +37,7 @@ mapTree f (Node l r) = Node (mapTree f l) (mapTree f r)</code></pre>
 
 <p>As you see, we define the function in terms of the "shape" of its arguments. Mapping an empty tree, <em>is</em> an empty tree, mapping a Leaf, is also a Leaf, but with the function applied, etc.</p>
 
-<p>Though, be careful! Algebraic Data Types are not the solution to all problems. Sometimes they make implementing even the simplest data structures, like a doubly linked-list, near impossible.</p>
+<p>Be careful though! Algebraic Data Types are not the solution to all problems. Sometimes they make implementing even the simplest data structures, like a doubly linked-list, near impossible.</p>
 
 <h2>Code Length &amp; Execution Time</h2>
 <p>I was quite surprised about this, but from what I've found my Haskell programs are about the same length or even longer as equivalent versions in Python and I take a lot longer to write them, though that is probably due to my inexperience with Haskell's style of programming. But this chart from the <a href="http://benchmarksgame.alioth.debian.org/u32q/benchmark.php?test=all&lang=ghc&lang2=python3&data=u32q">Computer Language Benchmarks Game</a> shows that I'm not alone:</p>
@@ -49,4 +48,4 @@ mapTree f (Node l r) = Node (mapTree f l) (mapTree f r)</code></pre>
 
 <h2>Wrapping Up</h2>
 
-<p>So you can see, Haskell has quite a few interesting features, that when using them, it feels like you're learning to program for the first time again. Nevertheless you should absolutely try it out and have your mind bended!</p>
+<p>So you can see, Haskell has quite a few interesting features, that when using them, it feels like you're learning to program for the first time again. Nevertheless you should absolutely try it out and have your mind reprogrammed!</p>
