Fixed link to intro article

--- a/_posts/2014-08-07-baby-emulator.html
+++ b/_posts/2014-08-07-baby-emulator.html
@@ -20,6 +20,6 @@ Value at location #27: 131072</code></pre>
 Value at location #21: 5</code></pre>
 
 <p>Running this will give you the 3rd prime, and for all the ones following that, you've just got to keep on adding successive calls to <code>gobaby</code>.</p>
-<p>So that's all there is to say about the emulator, to find out more about the Baby you should read David Sharp's <a href="www.davidsharp.com/baby/NeilCroft-TechnicalIntroductionToProgrammingTheBabyv4.0.pdf">Technical Introduction To Programming The Baby</a> and of course its <a href="http://en.wikipedia.org/wiki/Manchester_Small-Scale_Experimental_Machine">Wikipedia article</a>.
+<p>So that's all there is to say about the emulator, to find out more about the Baby you should read David Sharp's <a href="http://www.davidsharp.com/baby/NeilCroft-TechnicalIntroductionToProgrammingTheBabyv4.0.pdf">Technical Introduction To Programming The Baby</a> and of course its <a href="http://en.wikipedia.org/wiki/Manchester_Small-Scale_Experimental_Machine">Wikipedia article</a>.
 
 <p>Share and enjoy!</p>
