--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
-layout: page
-title: Joseph Adams
+layout: default
 ---
-<h2><a name="posts" href="#posts">#</a>Blog Posts</h2>
+<style>p{margin-left: 30px;} #page_title{margin-bottom: 20px;}</style>
+<h1 id="page_title">{{ site.title }}</h1>
+
 {% include articles.html %}
 <!--p class="entity"><a href="/archive">More Posts</a></p-->
-
 {% include projects.html %}
 {% include about.html %}
